# ema

./: README.md  flake.nix  printer.py  pyproject.toml
ema/: commands.py  gacha.py
